Fix inline images within full/wide aligned Image block captions inherit width style

--- a/packages/block-library/src/image/style.scss
+++ b/packages/block-library/src/image/style.scss
@@ -11,8 +11,8 @@
 		text-align: center;
 	}
 
-	&.alignfull img,
-	&.alignwide img {
+	&.alignfull > img,
+	&.alignwide > img {
 		width: 100%;
 	}
 
